# GenETL

./: .gitignore  README.md  pyproject.toml  requirements.txt
ETL_tools/: execution.py  sql.py
docs/: README.md  architecture.md  data-models.md  developer-guide.md  security.md  testing.md
etl/: ExtractDeleteAndLoad.py
src/etl/: ExtractDeleteAndLoad.py  __init__.py  edl.py
src/etl_tools/: __init__.py  api.py  aws.py  execution.py  gcp.py  sql.py
tools/: sql.py
