[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "GenETL"
version = "0.0.2"
authors = [
  { name="XxZeroGravityxX", email="14165536+XxZeroGravityxX@users.noreply.github.com" },
]
description = "A generic ETL routines module for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/XxZeroGravityxX/ETL_module"